@@ -385,37 +385,16 @@ public class WiProProtocol extends AbstractProtocol {
 			//If it is WiPro 2.0 it must have binary header
 			if (_version == 2) {
 				BinaryFrameHeader binFrameHeader = new BinaryFrameHeader();
+				binFrameHeader = binFrameHeader.parseBinaryHeader(data);
 				
-				byte RPC_Type = (byte) (data[0] >>> 4);
-				binFrameHeader.setRPCType(RPC_Type);
-				
-				int _functionID = (BitConverter.intFromByteArray(data, 0) & 0x0FFFFFFF);
-				binFrameHeader.setFunctionID(_functionID);
-				
-				int corrID = BitConverter.intFromByteArray(data, 4);
-				binFrameHeader.setCorrID(corrID);
-				
-				int _jsonSize = BitConverter.intFromByteArray(data, 8);
-				binFrameHeader.setJsonSize(_jsonSize);
-				
-				byte[] _jsonData = new byte[_jsonSize];
-				System.arraycopy(data, 12, _jsonData, 0, _jsonSize);
-				binFrameHeader.setJsonData(_jsonData);
-				
-				if ( data.length - _jsonSize - 12 > 0 )
-				{
-					int l = data.length;
-					byte[] _bulkData = new byte[data.length - _jsonSize];
-					System.arraycopy(data, 12 + _jsonSize, _bulkData, 0, data.length - _jsonSize -12 );
-					binFrameHeader.setBulkData(_bulkData);
-					message.setBulkData(_bulkData);
-				}	
-
 				message.setVersion(_version);
-				message.setRPCType(RPC_Type);
-				message.setFunctionID(_functionID);
-				message.setCorrID(corrID);
-				message.setData(_jsonData);
+				message.setRPCType(binFrameHeader.getRPCType());
+				message.setFunctionID(binFrameHeader.getFunctionID());
+				message.setCorrID(binFrameHeader.getCorrID());
+				message.setData(binFrameHeader.getJsonData());
+				if (binFrameHeader.getBulkData() != null) {
+					message.setBulkData(binFrameHeader.getBulkData());
+				}
 			} else message.setData(data);
 			
 			_assemblerForMessageID.remove(header.getMessageID());
